<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="489dp"
        android:layout_marginBottom="582dp"
        android:background="#FFFFFF"
        android:text="@string/piso_2"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="363dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/planta_baja2"
        android:visibility="visible"
        tools:visibility="visible">

    </Button>

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="455dp"
        android:backgroundTint="#FF5722"
        android:text="@string/piso_1"></Button>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1021dp"
        android:layout_height="513dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/mapa_p2"
        app:srcCompat="@drawable/piso2" />

</RelativeLayout>