<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="675dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:text="@string/piso_1"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="434dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/planta_baja1"
        android:visibility="visible"
        tools:visibility="visible">

    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="320dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/piso_2"
        android:visibility="visible"
        tools:visibility="visible"></Button>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="946dp"
        android:layout_height="662dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/mapa_p1"
        app:srcCompat="@drawable/piso1" />

</RelativeLayout>