<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="675dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="895dp"
        android:layout_marginBottom="592dp"
        android:background="#FFFFFF"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:text="@string/planta_baja1"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="372dp"
        android:backgroundTint="#FF5722"
        android:text="@string/piso1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="967dp"
        android:layout_height="465dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/mapa_pb"
        app:srcCompat="@drawable/planta_baja" />


</RelativeLayout>